# ai-job-hunter

./: .env.example  .gitignore  README.en.md  README.md  main.py  pyproject.toml
config/: settings.py
src/graph/: builder.py
src/graph/nodes/: enricher.py  evaluator.py  filter.py  planner.py  quality_gate.py  reporter.py  scraper.py  searcher.py
src/models/: job.py
src/prompts/: planner_prompt.py
src/sources/: base_source.py  boss_zhipin.py  liepin.py  mock_source.py  zhaopin.py
src/state/: job_search_state.py
src/tools/: base.py  data_adapter.py  search_engine.py  web_scraper.py
src/utils/: logger.py
tests/: test_acceptance.py  test_searcher.py
